--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                 <div class="header-cell header-interior">Interior</div>
                 <div class="header-cell header-year">Year</div>
                 <div class="header-cell header-vin">VIN</div>
-                <div class="header-cell header-packages">Packages</div>
+                <div class="header-cell header-packages">Packages(Destination Charge: $875.99 | Gas Guzzler Tax: $1,300.00)</div>
                 <div class="header-cell header-msrp">MSRP</div>
                 <div class="header-cell header-dealer">Dealer Name</div>
             </div>
