--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E9x M3 Database</title>
+
+    <!-- AuthPro page protection / login -->
+    <script type="text/javascript" src="https://www.authpro.com/auth/sman201/?action=pp"></script>
+
     <style>
         * {
             margin: 0;
@@ -561,11 +565,75 @@
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
+
+        /* --- Login portal styles --- */
+        .login-wrapper {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #111827;
+            color: #f9fafb;
+            padding: 16px;
+            box-sizing: border-box;
+        }
+
+        .login-box {
+            background: #1f2937;
+            padding: 24px 32px;
+            border-radius: 12px;
+            max-width: 400px;
+            width: 100%;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.4);
+            text-align: center;
+        }
+
+        .login-title {
+            font-size: 20px;
+            margin-bottom: 8px;
+        }
+
+        .login-subtitle {
+            font-size: 13px;
+            color: #9ca3af;
+            margin-bottom: 16px;
+        }
+
+        .logout-link {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            text-decoration: none;
+            color: #111827;
+            background: #e5e7eb;
+            padding: 6px 10px;
+            border-radius: 999px;
+            font-size: 12px;
+        }
     </style>
 </head>
 <body>
 
-<div class="app-shell">
+<!-- Logout link (shown only when logged in) -->
+<a href="https://www.authpro.com/auth/sman201/?action=logout" class="logout-link" id="logout-link" style="display:none;">
+    Logout
+</a>
+
+<!-- Login Portal -->
+<div id="login-portal" class="login-wrapper">
+    <div class="login-box">
+        <div class="login-title">E9x M3 Database</div>
+        <div class="login-subtitle">
+            Please log in to access the U.S. E9x M3 inventory.
+        </div>
+        <p style="font-size: 13px; color: #d1d5db; margin-top: 12px;">
+            After successful login you’ll be redirected automatically.
+        </p>
+    </div>
+</div>
+
+<!-- MAIN APP (hidden until logged in) -->
+<div class="app-shell" id="app-shell" style="display:none;">
 
     <!-- TOP NAV BAR -->
     <header class="top-nav">
@@ -669,47 +737,48 @@
 
         </div>
     </div>
-</div>
 
-<!-- Selection Counter -->
-<div class="selection-count" id="selection-count">
-    <span id="selection-count-text">0 Selected</span>
-</div>
+    <!-- Selection Counter -->
+    <div class="selection-count" id="selection-count">
+        <span id="selection-count-text">0 Selected</span>
+    </div>
 
-<!-- Side Panel -->
-<div class="side-panel" id="side-panel">
-    <div class="side-panel-header">
-        <div class="side-panel-header-top">
-            <div class="side-panel-title">1 Selected</div>
-            <button class="side-panel-close" onclick="closeSidePanel()">✕</button>
+    <!-- Side Panel -->
+    <div class="side-panel" id="side-panel">
+        <div class="side-panel-header">
+            <div class="side-panel-header-top">
+                <div class="side-panel-title">1 Selected</div>
+                <button class="side-panel-close" onclick="closeSidePanel()">✕</button>
+            </div>
+            <div class="side-panel-vehicle-name" id="panel-vehicle-name">-</div>
+            <div class="side-panel-vehicle-info" id="panel-vehicle-info">-</div>
         </div>
-        <div class="side-panel-vehicle-name" id="panel-vehicle-name">-</div>
-        <div class="side-panel-vehicle-info" id="panel-vehicle-info">-</div>
-    </div>
-    <div class="side-panel-divider">
-        <span class="side-panel-divider-arrow">▼</span>
-    </div>
-    <div class="side-panel-menu">
-        <div class="side-panel-menu-grid">
-            <div class="side-panel-menu-item" onclick="handleDetailsClick()">
-                <span class="side-panel-menu-icon">☰</span>
-                <span class="side-panel-menu-text">Details</span>
-            </div>
-            <div class="side-panel-menu-item" onclick="handleVSpecClick()">
-                <span class="side-panel-menu-icon">📋</span>
-                <span class="side-panel-menu-text">V-Spec</span>
-            </div>
-            <div class="side-panel-menu-item" onclick="handleStickerClick()">
-                <span class="side-panel-menu-icon">🏷️</span>
-                <span class="side-panel-menu-text">Sticker</span>
-            </div>
-            <div class="side-panel-menu-item" onclick="handleInvoiceClick()">
-                <span class="side-panel-menu-icon">📄</span>
-                <span class="side-panel-menu-text">Invoice</span>
+        <div class="side-panel-divider">
+            <span class="side-panel-divider-arrow">▼</span>
+        </div>
+        <div class="side-panel-menu">
+            <div class="side-panel-menu-grid">
+                <div class="side-panel-menu-item" onclick="handleDetailsClick()">
+                    <span class="side-panel-menu-icon">☰</span>
+                    <span class="side-panel-menu-text">Details</span>
+                </div>
+                <div class="side-panel-menu-item" onclick="handleVSpecClick()">
+                    <span class="side-panel-menu-icon">📋</span>
+                    <span class="side-panel-menu-text">V-Spec</span>
+                </div>
+                <div class="side-panel-menu-item" onclick="handleStickerClick()">
+                    <span class="side-panel-menu-icon">🏷️</span>
+                    <span class="side-panel-menu-text">Sticker</span>
+                </div>
+                <div class="side-panel-menu-item" onclick="handleInvoiceClick()">
+                    <span class="side-panel-menu-icon">📄</span>
+                    <span class="side-panel-menu-text">Invoice</span>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+</div> <!-- end #app-shell -->
 
 <script>
 // Reference data storage - will be populated from reference.csv
@@ -1462,9 +1531,47 @@ function handleCustDelChklistClick() {
     alert('Customer Delivery Checklist - Coming soon!');
 }
 
+// --- AuthPro login handling ---
+
+function toggleAppVisibility() {
+    const app = document.getElementById('app-shell');
+    const portal = document.getElementById('login-portal');
+    const logoutLink = document.getElementById('logout-link');
+
+    // AuthPro sets "login" for logged-in members (global var injected by their script)
+    if (typeof login !== 'undefined' && login) {
+        // Logged in
+        if (portal) portal.style.display = 'none';
+        if (app) app.style.display = 'block';
+        if (logoutLink) logoutLink.style.display = 'inline-flex';
+        return true;
+    } else {
+        // Not logged in
+        if (portal) portal.style.display = 'flex';
+        if (app) app.style.display = 'none';
+        if (logoutLink) logoutLink.style.display = 'none';
+        return false;
+    }
+}
+
 document.addEventListener('DOMContentLoaded', () => {
-    setupFilterInputs();
-    loadCSV();
+    // Check immediately on load
+    const isLoggedIn = toggleAppVisibility();
+
+    if (isLoggedIn) {
+        // Only load data if we’re actually logged in
+        setupFilterInputs();
+        loadCSV();
+    } else {
+        // Poll every 2 seconds in case AuthPro logs them in on this page
+        const interval = setInterval(() => {
+            if (toggleAppVisibility()) {
+                clearInterval(interval);
+                setupFilterInputs();
+                loadCSV();
+            }
+        }, 2000);
+    }
 });
 </script>
 
