--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E9x M3 Database</title>
     
-    <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Sman19/Functioning-Website/ac241a80e9369136c2629f014a56dfff7f28fa03/carbo-insta_1080x1080%20Favicon.png">
-    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Sman19/Functioning-Website/ac241a80e9369136c2629f014a56dfff7f28fa03/carbo-insta_1080x1080%20Favicon.png">
+    <!-- ANIMATED FAVICON -->
+    <link rel="icon" type="image/gif" href="carboi-favicon.gif">
+    <link rel="apple-touch-icon" href="carboi-favicon.gif">
 
     <style>
         * {
