--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E9x M3 Database</title>
+
+    <style>
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+
+  body {
+    background: linear-gradient(
+      135deg,
+      #0f0f10,
+      #1a1a1d,
+      #2a004f,
+      #7a00ff,
+      #00e0ff
+    );
+    background-size: 500% 500%;
+    animation: gradientFlow 18s ease infinite;
+    color: #ffffff;
+  }
+
+  @keyframes gradientFlow {
+    0%   { background-position: 0% 50%; }
+    50%  { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+</style>
+
     
    <!-- ANIMATED FAVICON -->
     <link id="favicon" rel="icon" type="image/png"
