--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
   }
 </style>
 
-    
+<style>
+body::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: radial-gradient(circle at 30% 30%, rgba(122,0,255,0.15), transparent 60%);
+  pointer-events: none;
+}
+</style>
+
    <!-- ANIMATED FAVICON -->
     <link id="favicon" rel="icon" type="image/png"
       href="https://raw.githubusercontent.com/Sman19/Functioning-Website/ac241a80e9369136c2629f014a56dfff7f28fa03/carbo-insta_1080x1080%20Favicon.png">
